tests/fixtures/invalid-glass-files/malformed-header.glass
This is not a valid glass file.
It has no sections at all.
Just random text.
